# assetuniverse

./: .gitignore  CHANGELOG.md  README.md  README3.md  example.py  ib.py  pyproject.toml  readme.md  requirements.txt  setup.cfg  setup.py  test.py
.github/: python-lib.yaml
.github/workflows/: python-lib.yaml
assetuniverse/: ContractSamples.py  __init__.py  asset.py  core.py  coreAU.py  coreI.py  downloaders.py  twsapi.py
assetuniverse/utils/: asset.py  downloaders.py
diagrams/: architecture.drawio
examples/: assets.xlsx  example.py  offline.py
tests/: test_basic.py
