[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "assetuniverse"
version = "0.1.0"
authors = [
  {name="Matthew Trotter"},
]
description = "A downloader of historical daily returns for multiple investable assets with some analysis tools too."
readme = "README.md"
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.7"
keywords = ["historical returns", "returns", "daily returns", "stocks", "futures", "commodities", "interactive brokers", "yahoo finance", "fred"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]
dependencies = [
    "appdirs",
    "diskcache",
    "ib_insync",
    "numpy",
    "pandas",
    "pandas-datareader",
    "plotly",
    "yfinance",
]
