[metadata]
name = assetuniverse
version = attr: assetuniverse.VERSION
description = A downloader of historical daily returns for multiple investable assets.
long_description = file: README.md
keywords = historical returns, returns, daily returns, stocks, futures, commodities, interactive brokers, yahoo finance, fred
license = GPL-3.0-or-later
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
zip_safe = False
include_package_data = True
packages = find:
install_requires =
    appdirs
    arrow
    diskcache
    ib_insync
    numpy
    pandas
    pandas-datareader
    plotly
    pytest
    yfinance
